[gd_scene load_steps=13 format=3 uid="uid://bc3usmh68nbe0"]

[ext_resource type="Script" path="res://graphics.gd" id="1_5b8ih"]
[ext_resource type="FontFile" uid="uid://dp75um7jdyrun" path="res://imports/fonts/Eurostile.ttf" id="1_8q2eo"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mhp6s"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_icu7h"]
bg_color = Color(1, 0.588235, 0.156863, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4jbne"]
bg_color = Color(1, 0.588235, 0.156863, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pcutd"]
bg_color = Color(1, 0.588235, 0.156863, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ivqh8"]
bg_color = Color(1, 0.588235, 0.156863, 1)

[sub_resource type="Gradient" id="Gradient_sk063"]
offsets = PackedFloat32Array(0.987097, 1)
colors = PackedColorArray(0, 0, 0, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_57m3l"]
gradient = SubResource("Gradient_sk063")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qdpag"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5h68y"]
bg_color = Color(1, 0.588235, 0.156863, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7yb8s"]
bg_color = Color(1, 0.588235, 0.156863, 1)

[node name="Graphics" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5b8ih")

[node name="Menu" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -100.0
offset_right = 200.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="Labels" type="VBoxContainer" parent="Menu"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Mode" type="Label" parent="Menu/Labels"]
layout_mode = 2
size_flags_vertical = 6
theme_override_colors/font_color = Color(1, 0.588235, 0.156863, 1)
theme_override_fonts/font = ExtResource("1_8q2eo")
theme_override_font_sizes/font_size = 30
text = "Mode"

[node name="Vsync" type="Label" parent="Menu/Labels"]
layout_mode = 2
size_flags_vertical = 6
theme_override_colors/font_color = Color(1, 0.588235, 0.156863, 1)
theme_override_fonts/font = ExtResource("1_8q2eo")
theme_override_font_sizes/font_size = 30
text = "Vsync"

[node name="FXAA" type="Label" parent="Menu/Labels"]
layout_mode = 2
size_flags_vertical = 6
theme_override_colors/font_color = Color(1, 0.588235, 0.156863, 1)
theme_override_fonts/font = ExtResource("1_8q2eo")
theme_override_font_sizes/font_size = 30
text = "FXAA"

[node name="MSAA" type="Label" parent="Menu/Labels"]
layout_mode = 2
size_flags_vertical = 6
theme_override_colors/font_color = Color(1, 0.588235, 0.156863, 1)
theme_override_fonts/font = ExtResource("1_8q2eo")
theme_override_font_sizes/font_size = 30
text = "MSAA"

[node name="Options" type="VBoxContainer" parent="Menu"]
layout_mode = 2
size_flags_horizontal = 6

[node name="ModeDropdown" type="OptionButton" parent="Menu/Options"]
layout_mode = 2
size_flags_vertical = 6
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(1, 0.588235, 0.156863, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(1, 0.588235, 0.156863, 1)
theme_override_fonts/font = ExtResource("1_8q2eo")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxEmpty_mhp6s")
theme_override_styles/hover = SubResource("StyleBoxFlat_icu7h")
theme_override_styles/pressed = SubResource("StyleBoxFlat_4jbne")

[node name="VsyncCheck" type="CheckBox" parent="Menu/Options"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(1, 0.588235, 0.156863, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(1, 0.588235, 0.156863, 1)
theme_override_colors/font_disabled_color = Color(1, 0.588235, 0.156863, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxEmpty_mhp6s")
theme_override_styles/pressed = SubResource("StyleBoxFlat_pcutd")
theme_override_styles/disabled = SubResource("StyleBoxFlat_pcutd")
theme_override_styles/hover = SubResource("StyleBoxFlat_icu7h")
button_pressed = true

[node name="FXAACheck" type="CheckBox" parent="Menu/Options"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(1, 0.588235, 0.156863, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(1, 0.588235, 0.156863, 1)
theme_override_colors/font_disabled_color = Color(1, 0.588235, 0.156863, 1)
theme_override_colors/font_outline_color = Color(1, 0.588235, 0.156863, 1)
theme_override_constants/outline_size = 0
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxEmpty_mhp6s")
theme_override_styles/pressed = SubResource("StyleBoxFlat_pcutd")
theme_override_styles/disabled = SubResource("StyleBoxFlat_pcutd")
theme_override_styles/hover = SubResource("StyleBoxFlat_icu7h")
button_pressed = true

[node name="MSAADropdown" type="OptionButton" parent="Menu/Options"]
layout_mode = 2
size_flags_vertical = 6
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(1, 0.588235, 0.156863, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(1, 0.588235, 0.156863, 1)
theme_override_fonts/font = ExtResource("1_8q2eo")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxEmpty_mhp6s")
theme_override_styles/hover = SubResource("StyleBoxFlat_icu7h")
theme_override_styles/pressed = SubResource("StyleBoxFlat_4jbne")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.588235, 0.156863, 1)
theme_override_fonts/font = ExtResource("1_8q2eo")
theme_override_font_sizes/font_size = 40
text = "OPTIONS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5
theme_override_styles/separator = SubResource("StyleBoxFlat_ivqh8")

[node name="Label2" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.588235, 0.156863, 1)
theme_override_fonts/font = ExtResource("1_8q2eo")
theme_override_font_sizes/font_size = 30
text = "GRAPHICS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="."]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = SubResource("GradientTexture2D_57m3l")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -100.0
offset_right = 400.0
grow_vertical = 0

[node name="BackBtn" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(1, 0.588235, 0.156863, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(1, 0.588235, 0.156863, 1)
theme_override_fonts/font = ExtResource("1_8q2eo")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxEmpty_qdpag")
theme_override_styles/hover = SubResource("StyleBoxFlat_5h68y")
theme_override_styles/pressed = SubResource("StyleBoxFlat_7yb8s")
text = "BACK"

[node name="ApplyBtn" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(1, 0.588235, 0.156863, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(1, 0.588235, 0.156863, 1)
theme_override_fonts/font = ExtResource("1_8q2eo")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxEmpty_qdpag")
theme_override_styles/hover = SubResource("StyleBoxFlat_5h68y")
theme_override_styles/pressed = SubResource("StyleBoxFlat_7yb8s")
text = "APPLY"

[connection signal="item_selected" from="Menu/Options/ModeDropdown" to="." method="_on_mode_dropdown_item_selected"]
[connection signal="toggled" from="Menu/Options/VsyncCheck" to="." method="_on_vsync_check_toggled"]
[connection signal="toggled" from="Menu/Options/FXAACheck" to="." method="_on_vsync_check_toggled"]
[connection signal="item_selected" from="Menu/Options/MSAADropdown" to="." method="_on_aa_dropdown_item_selected"]
[connection signal="pressed" from="HBoxContainer/BackBtn" to="." method="_on_back_btn_pressed"]
